ajout des inconvenient de la solution couleur

--- a/edla/conclusion.tex
+++ b/edla/conclusion.tex
@@ -4,7 +4,8 @@
 Durant cet état de l'art, nous avons étudié plusieurs publications portant sur la détection et le suivi
 d'une main. Nous avons vu une première solution utilisant une image couleur. Cette solution était très
 intéressante quand les caméras de profondeur n'était pas très répandu. Au vu des résultats fourni dans
-\cite{haarlike} cette méthode est très efficace. Cependant, les outils que l'on nous fournit nous permettent
+\cite{haarlike} cette méthode est efficace, mais elle n'est pas adapté à la modélisation d'une main 3D. 
+De plus, les outils que l'on nous fournit nous permettent
 de gagner du temps sur certaine partie de notre développement et la méthode utilisant une image couleur
 est assez compliqué à implémenter. C'est pourquoi nous avons choisi la seconde méthode qui est plus
 simple à développer et plus précise grâce aux outils fourni par la Kinect. La difficulté de cette méthode
