--- a/edla/solution.tex
+++ b/edla/solution.tex
@@ -90,8 +90,8 @@ précis lorsque l'utilisateur effectue des changements de direction rapides avec
 
 Cette méthode, nous permet de déterminer la position de la main et de détecter le bout des doigts. Cependant, elle ne nous permet
 pas de réaliser notre projet entièrement. En effet, nous avons besoin de plus de précision en détectant les articulations
-de la main.
-%TODO rajouter prob lumiere + 3D
+de la main. De plus, cette méthode est sensible à la luminosité de la scène filmé et n'est pas très adapté
+à la modélisation 3D d'une main.
 
 \subsection{Détection et suivi de la main avec une image de profondeur}
 Une seconde solution utilise une image de profondeur plutôt que l'image binarisée avec le changement d'espace colorimétrique.
