correction previsionnel et conclusion terminé

--- a/edla/previsionnel.tex
+++ b/edla/previsionnel.tex
@@ -45,13 +45,13 @@ de réussir à modifier ce mesh dans le but de gérer le niveau de détail de la
 partie est nécessaire pour que lors du mouvement de la main, il n'y est pas d'effet visuel indésirable.
 Pour cela, il nous faudra utiliser la méthode décrite dans \cite{export:217428}.\\
 
-La dernière étape est de faire correspondre les articulations de la main détecté dans l'étape deux avec
-le mesh de la main. Cette méthode est expliqué dans \cite{export:217428}.\\
+La dernière étape est de faire correspondre les articulations de la main détectées dans l'étape deux avec
+le mesh de la main. Cette méthode est expliquée dans \cite{export:217428}.\\
 
-Une fois que la représentation de la main sera effectué dans une scène Unity, nous devrons réaliser une 
+Une fois que la représentation de la main sera effectuée dans une scène Unity, nous devrons réaliser une 
 application de démonstration permettant de montrer différent type d'interaction possible avec notre 
-méthode. Pour cela, nous nous sommes inspirées de plusieurs applications développées pour l'outil
-Leap Motion(voire Fig. \ref{fig:example}). Notre idée pour cette application de démonstration est de fabriquer plusieurs cube dans 
+méthode. Pour cela, nous nous sommes inspirés de plusieurs applications développées pour l'outil
+Leap Motion(voire Fig. \ref{fig:example}). Notre idée pour cette application de démonstration est de fabriquer plusieurs cubes dans 
 une scène et de demander à l'utilisateur de les empiler pour fabriquer une pyramide. Nous avons pris
 ce concept, car ce type d'application n'est pas réalisable avec d'autre type d'IHM et que cela demande
 beaucoup de précision.
@@ -71,4 +71,3 @@ beaucoup de précision.
     \label{fig:planning}
   \end{center}
 \end{figure}
-%TODO expliquer quel sera la demo de fin
