--- a/edla/conclusion.tex
+++ b/edla/conclusion.tex
@@ -2,10 +2,10 @@
 \addcontentsline{toc}{chapter}{Conclusion}
 %solution envisagé
 Durant cet état de l'art, nous avons étudié plusieurs publications portant sur la détection et le suivi
-d'une main. Nous avons vu une première solution utilisant une image couleur. Cette solution était très
-intéressante quand les caméras de profondeur n'était pas très répandu. Au vu des résultats fourni dans
-\cite{haarlike} cette méthode est efficace, mais elle n'est pas adapté à la modélisation d'une main 3D. 
-De plus, les outils que l'on nous fournit nous permettent
+d'une main. Nous avons vu une première solution utilisant une image couleur. Cette solution était
+intéressante quand les caméras de profondeur n'étaient pas très répandu. Au vu des résultats fourni dans
+\cite{haarlike} cette méthode est efficace, mais elle n'est pas adapté à la modélisation d'une main 3D, elle permet
+de traquer la main et de reconnaître quelques postures. De plus, les outils que l'on nous fournit nous permettent
 de gagner du temps sur certaine partie de notre développement et la méthode utilisant une image couleur
 est assez compliqué à implémenter. C'est pourquoi nous avons choisi la seconde méthode qui est plus
 simple à développer et plus précise grâce aux outils fourni par la Kinect. La difficulté de cette méthode
@@ -13,7 +13,7 @@ est l'adapation du modèle à la main de l'utilisateur.\\
 
 %previsionnel
 Nous avons donc prévu une première phase dans le projet où nous allons intégrer les outils et le modèle
-dans une scène Unity3D au moyen de script. Cette première phase est partagé en plusieurs étapes permettant
+dans une scène Unity3D au moyen de script. Cette première phase est partagée en plusieurs étapes permettant
 de partager au mieux les tâches entre chacun d'entre nous. La seconde phase est la réalisation du projet en lui-même, c'est-à-dire 
 que nous devons obtenir un modèle qui se déplace dans l'espace et effectue les mouvements de l'utilisateur.
 Et la dernière phase est la réalisation d'une application de démonstration qui doit valoriser notre travail
@@ -22,7 +22,7 @@ la souris et le clavier. Cette application doit montrer le niveau de précision 
 avec ce genre de système.\\
 
 %ce que nous avons appris
-Cette première partie du projet a été très instructif que se soit sur l'apprentissage des technique de détection et de manipulation
+Cette première partie du projet a été très instructif que se soit sur l'apprentissage des techniques de détection et de manipulation
 de modèle 3D que sur le plan de la collaboration en équipe. Nous avons énormément appris sur la rédaction d'un
 état de l'art, ainsi que sur la compréhension d'article de recherche. Nous avons pu pleinement mettre à profit
 nos cours sur \og l'initiation à la recherche et à l'innovation \fg. Suite à la réalisation de ce rapport nous avons pu
