--- a/edla/conclusion.tex
+++ b/edla/conclusion.tex
@@ -4,11 +4,11 @@
 Durant cet état de l'art, nous avons étudié plusieurs publications portant sur la détection et le suivi
 d'une main. Nous avons vu une première solution utilisant une image couleur. Cette solution était
 intéressante quand les caméras de profondeur n'étaient pas très répandu. Au vu des résultats fourni dans
-\cite{haarlike} cette méthode est efficace, mais elle n'est pas adapté à la modélisation d'une main 3D, elle permet
+\cite{haarlike} cette méthode est efficace, mais elle n'est pas adaptée à la modélisation d'une main 3D, elle permet
 de traquer la main et de reconnaître quelques postures. De plus, les outils que l'on nous fournit nous permettent
 de gagner du temps sur certaine partie de notre développement et la méthode utilisant une image couleur
 est assez compliqué à implémenter. C'est pourquoi nous avons choisi la seconde méthode qui est plus
-simple à développer et plus précise grâce aux outils fourni par la Kinect. La difficulté de cette méthode
+simple à développer et plus précise grâce aux outils fournis par la Kinect. La difficulté de cette méthode
 est l'adapation du modèle à la main de l'utilisateur.\\
 
 %previsionnel
