modification des images et de leurs taille

--- a/edla/solution.tex
+++ b/edla/solution.tex
@@ -57,7 +57,7 @@ les masques noirs.\\
 
 \begin{figure}[!h]
 \center
-\includegraphics[width=200px]{images/pseudo_haar.png}
+\includegraphics[width=200px]{images/pseudoHaar.jpg}
 \caption{Exemple de caractéristiques pseudo-Haar utilisées pour l'algorithme Viola et Jones}
 \label{fig:pseudo_haar}
 \end{figure}
@@ -80,8 +80,6 @@ de couleur. Cette méthode permet d'obtenir un graphe correspondant à la Fig. \
 \caption{Histogramme des distances entre les points du contour de la main et le centroide}
 \label{fig:handHisto}
 \end{figure}
-
-\newpage
 
 Afin de pouvoir traquer la main, S. Bilal et al \cite{haarlike} utilisent l'algorithme de Kalman \cite{kalman}.
 Cet algorithme permet de prédire la position d'un objet, ce qui va permettre de traquer la main malgré
@@ -107,7 +105,7 @@ jusqu'à atteindre une feuille (voir Fig. \ref{fig:arbre}).
 
 \begin{figure}[!h]
    \begin{center}
-     \includegraphics[width=8cm]{images/Arbre_de_decision.jpg}
+     \includegraphics[width=10cm]{images/Arbre_de_decision.jpg}
      \caption{Exemple d'arbre de décision}
      \label{fig:arbre}
    \end{center}
