Correction orhtographiques et synthaxiques du rapport

--- a/edla/biblio.bib
+++ b/edla/biblio.bib
@@ -90,8 +90,8 @@ ISSN={2152-7431},
 month={Aug},}
 
 @inproceedings{viola2001jones,
-  title={Jones,“Robust real-time object detection,”},
-  author={Viola, Paul},
+  title={Robust real-time object detection},
+  author={Viola, Paul and Jones, Michael},
   booktitle={IEEE Workshop on Statistical and Theories of Computer Vision},
   year={2001}
 }
