--- a/edla/intro.tex
+++ b/edla/intro.tex
@@ -7,7 +7,7 @@ nous avons l'occasion de réaliser un projet orienté recherche. Nous avons
 sélectionné le sujet \og Hand Kinect \fg, car nous nous intéressons à la 
 modélisation 3D et aux dernières techniques d'acquisition.
 De plus, ce projet est en rapport avec chacune de nos matières de
-notre master. Nous utilisons des notion de modélisation 3D avec la main, de vision artificielle avec l'exploitation d'une caméra, de réalité virtuelle et l'interaction avec l'environnement dans lequel la main va se déplacer et de nouvelle intéraction
+notre master. Nous utilisons des notions de modélisation 3D de la main, de vision par ordinateur à l'aide d'une caméra, de réalité virtuelle et l'interaction avec l'environnement dans lequel la main va se déplacer et de nouvelle intéraction
 homme machine qui est le sujet de ce projet.\\
 
 L'homme utilise continuellement ses mains de manière naturelle. Nous 
@@ -37,7 +37,7 @@ interfaces immersives.\\
 Dans ce domaine, les problématiques actuelles sont variées. Il est 
 nécessaire de détecter les articulations de la main de manière précise. 
 Les variations de luminosité sont courantes, la méthode doit être robuste 
-à ces variations. L'application doit être temps réel, pour fonctionner de 
+à ces variations. L'application doit être en temps réel, pour fonctionner de 
 manière interactive.\\
 
 % plan
