--- a/edla/presentation.tex
+++ b/edla/presentation.tex
@@ -6,7 +6,7 @@
 Aujourd'hui, détecter les points des articulations du corps humain 
 est une technique courante, grâce à certain périphérique tel que la 
 Kinect. Les points des articulations du corps forment le squelette 3D. 
-Cependant, les squelettes 3D sont en générales pas assez riche en 
+Cependant, les squelettes 3D ne sont en générales pas assez riche en 
 informations concernant les points des articulations des mains.\\
 
 Pourtant les mains sont habiles et nous pouvons faire de nombreux 
@@ -22,10 +22,8 @@ précision peut être utile dans divers domaines :
   \item jeux vidéo.\\
 \end{itemize}
 
-Le projet \og Hand Kinect \fg consiste à extraire depuis une Kinect 2, 
-les points correspondants aux articulations du corps grâce aux 
-fonctions du SDK de ce capteur. De plus, nous devons récupérer les 
-points des articulations des mains, pour cela nous étudions plusieurs 
+Le projet \og Hand Kinect \fg consiste à extraire depuis une caméra Kinect 2, 
+les points des articulations des mains, pour cela nous étudions plusieurs 
 méthodes réalisées jusqu'à maintenant. Ainsi, l'assemblage de ces points 
 nous permet d'obtenir le squelette 3D complet de la personne devant la 
 Kinect.\\
@@ -60,7 +58,7 @@ Dans le cadre de ce projet, nous sommes amenés à rédiger un état de la
 l'art. Cette première partie, nous permet de synthétiser et sélectionner 
 les solutions. Notre objectif étant de détecter la main d'une personne 
 et ses articulations, afin de modéliser en 3D la main de 
-cette personne, dans des plans de caméra global ou rapprocher. Cela 
+cette personne, dans un champs de caméra global ou rapprocher. Cela 
 doit être réalisable en temps réel et à partir d'une caméra nous 
 fournissant une image RGB et une image contenant l'information de 
 profondeur de la scène filmée.\\
@@ -68,12 +66,12 @@ profondeur de la scène filmée.\\
 \section{Contexte}
 La réalisation de ce projet se fait avec l'équipe 3D 
 SAM\footnote{Modeling and Analysis of Static and Dynamic Shapes}. 
-Cette équipe appartient au centre CRIStAL\footnote{Centre de Recherche 
+Cette équipe fait partie du laboratoire CRIStAL\footnote{Centre de Recherche 
 en Informatique, Signal et Automatique de Lille}. Ce centre est le 
 nouveau pôle de recherche qui regroupe les laboratoires d'informatique, 
 signal et automatique de Lille.\\
 
-L'équipe 3D SAM est basée à l'école d'ingénieur Télécom Lille 1. 
+L'équipe 3D SAM est basée à l'école d'ingénieur Télécom Lille. 
 Cette équipe conçoit de nouveaux outils et méthodes d'analyse des 
 formes des objets 3D statiques et dynamique. Ils travaillent sur 
 l'analyse de formes des objets 3D et la modélisation des variations 
@@ -96,7 +94,7 @@ Nous disposons également, d'un module nous permettant d'extraire les
 points des articulations de la main.
 
 \section{Problèmatique}
-D'abord, la Kinect 2 peux déjà suivre six personnes à la fois. Elle 
+D'abord, la Kinect 2 peut déjà suivre six personnes à la fois. Elle 
 détecte un squelette de vingt-six points (voir Fig. 
 \ref{fig:skeleton_kinect2} et \ref{fig:kinect1vs2}). Cependant, les 
 mains ne sont représentées seulement par 4 points, qui sont le centre 
@@ -116,9 +114,8 @@ articulations dans des positions contraignantes. En supplément, les
 problèmes liés à la luminosité sont récurrents, il est souhaitable 
 d'utiliser des techniques robustes et invariantes à la luminosité, 
 mais qui restent efficaces. De plus, il existe encore peu de méthodes 
-permettant de détecter la pose et les articulations des mains dans 
-un point de vue de caméra qui permettrais de retrouver l'ensemble du
-squelette humain.
+permettant de détecter la pose et les articulations par
+caméra qui permettrais de retrouver l'ensemble du squelette humain.
 
 %comment réaliser ce projet, avec quoi + résultat attendu
 \section{Objectif}
@@ -154,7 +151,7 @@ comprendre les principes utilisés pour la modélisation en 3D des
 mains.\\ 
 
 Étudier les techniques de détection des mains et leurs acticulations, 
-à pour objectif de bien cerner les méthodes qui peuvent être utiliser 
+a pour objectif de bien cerner les méthodes qui peuvent être utiliser 
 par le module. Celui-ci fournit les positions spatiales des 
 acticulations des mains.\\
 
@@ -171,7 +168,7 @@ impartis.\\
 La Kinect 2 de Microsoft possède une caméra couleur en mode YUV de 1920x1080 pixel.
 YUV est une combination particulière d'information permettant de restituer la couleur, comme RGB ou HSP.
 Cette combinaison aussi appelée YCbCr, avec Y la luminance, U/Cb la composante bleu sans luminance et V/Cr la composante rouge sans luminance.
-En plus de sa caméra, elle possède 3 diffuseur de rayonnement infrarouges qui servent à acquérir une carte de profondeur.
+En plus de sa caméra couleur, elle possède 3 diffuseurs de rayonnement infrarouges couplées à une caméra infrarouge qui servent à acquérir une carte de profondeur.
 Les autres fonctionnalités ne nous intéresseront pas pour résoudre notre problèmatique.\\
 
 \begin{figure}[H]
@@ -197,7 +194,7 @@ Par exemple pour notre projet, les jointures du poignet, du centre de la main, d
 \label{fig:skeleton_kinect2}
 \end{figure}
 
-\subsection{Différences entre Kinect et Kinect 2}
+\subsection{Différences entre Kinect V1 et Kinect V2}
 
 Comme on peut la voir dans l'image ci-dessous, la Kinect 2 est une amélioration de tout les aspect de la Kinect précédente.\\
 
